# routes/subscription_routes.go
@@ -10,4 +10,7 @@ import (
 func InitSubscriptionRoutes(app *fiber.App, subscriptionController *controllers.SubscriptionController) {
 	// Define the routes for subscription
 	app.Post("/subscriptions", middlewares.JWTProtected, middlewares.RoleMiddleware("admin"), subscriptionController.CreateSubscription)
+	app.Get("/subscriptions", subscriptionController.GetSubscriptions)
+	app.Put("/subscriptions/:subID", middlewares.JWTProtected, middlewares.RoleMiddleware("admin"), subscriptionController.UpdateSubscription)
+	app.Delete("/subscriptions/:subID", middlewares.JWTProtected, middlewares.RoleMiddleware("admin"), subscriptionController.DeleteSubscription)
 }
